--- a/static/style.css
+++ b/static/style.css
@@ -1,4 +1,7 @@
-.result-list {
-	border: solid 2px blue;
-	font-size: 1em;
-}
+ #response.disabled {
+     visibility: hidden;
+ }
+ 
+ #response {
+     min-height: 300px;
+ }
