--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>NoClick Summary</title>
+    <title>NoClick</title>
     <link rel="stylesheet" href="{{ url_for('static', filename = 'semantic.min.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename = 'style.css') }}">
 
