--- a/static/style.css
+++ b/static/style.css
@@ -1,7 +1,39 @@
  #response.disabled {
-     visibility: hidden;
+    visibility: hidden;
+ }
+
+ .nav {
+    padding: 0.5rem !important;
+    padding-left: 2.0rem !important;
+     
+     
+ }
+
+ .nav > span {
+    margin-top: 0px;
+ }
+
+ .nav > h1 {
+    margin-bottom: 0.2rem;
  }
  
  #response {
-     min-height: 300px;
+    min-height: 300px;
+ }
+
+ footer {
+    position: fixed !important;
+    bottom: 0;
+    left: 0;
+    padding-left: 1.0rem !important;
+    
+ }
+
+ footer a {
+    color: #eef66c;
+    transition: color 0.3s ease;
+ }
+
+ footer a:hover {
+    color: #f6af68
  }
